create comment changes

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,14 @@
 <div class="container" ng-controller="MainCtrl">
   <table class="table table-striped table-condensed table-hover">
     <tbody>
-       <tr ng-repeat="item in result">
+       <tr ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" >
+         <td>
+         <center>
+           <i title="Up Votes" ng-click="upVote(item.id)" class="btn btn-compare" style='cursor:pointer'></i>
+           <br/> <i title="Down Votes" ng-click="downVote(item.id)" class="btn btn-compare" style='cursor:pointer'></i>
+           <br/>{{item.vote}}
+         </center>
+        </td>
           <td>{{item.url}}</td>
       </tr>
     </tbody>
