--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -58,6 +58,21 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
+/* vote a post */
+.vote {
+  display: inline-block;
+  overflow: hidden;
+  width: 40px;
+  height: 25px;
+  cursor: pointer;
+  background: url('http://i.stack.imgur.com/iqN2k.png');
+  background-position: 0 -25px;
+}
+
+.red {
+    background-position: 0 2px;
+}
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
