--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,5 +2,6 @@
 <fb:login-button scope="public_profile,email,user_friends" onlogin="login();">
 </fb:login-button>
 <br>
+<button type="submit" ng-click="logout()" class="btn btn-success">Logout</button>
 <div id='fb-root'></div>
 </div>
