--- a/app/views/post.html
+++ b/app/views/post.html
@@ -12,8 +12,10 @@
     </div>
   </div>
   <div class="form-group">
-    <input type="file" name="file" onchange="angular.element(this).scope().uploadFile(this.files)"/>
-      <button ng-click="savePost()" >Submit</button>
+  <!--<input type="file" name="image" file-input="files" onchange="angular.element(this).scope().uploadFile(files)" multiple/>-->
+  <input type="file" file-input="files" multiple />
+  <button ng-click="savePost()" >Submit</button>
+  <li ng-repeat="file in files">{{file.name}}</li>
   </div>
 
 </form>
