hamlet controller for save comment

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
          </div>
          </div>
          <div style="width:130px;height:130px;float:left;">
-           <img src={{item.image_url}} height="130" width="130"></a>
+           <img src={{item.image_url[0].default.url}} height="130" width="130"></a>
          </div>
          <div style="float:left;font-weight:bold;height:130px;margin-left:10px;">
            <div style="margin:35%;width:100%;">
