--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -1,6 +1,7 @@
 <table class="table table-striped table-condensed table-hover">
   <tbody>
      <tr ng-repeat="item in comments">
+        <td>{{item.name}}</td>
         <td>{{item.comment}}</td>
     </tr>
   </tbody>
