--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -1,7 +1,7 @@
 <table class="table table-striped table-condensed table-hover">
      <div ng-repeat="item in comments">
-        <div id={{item.comment.id}}>{{item.comment.comment}} {{item.comment.name}}</div>
-        <span class="vote" ng-click="upVoteComment(item.id); $event.stopPropagation()"; ng-class="{red : toggle}"> </span>
+        <div id={{item.comment.id}}>{{item.comment.comment}} {{item.comment.name}} {{item.commentcount}}</div>
+        <span class="vote" ng-click="upVoteComment(item.comment.id); $event.stopPropagation()"; ng-class="{red : toggle}"> </span>
         <div ng-repeat="reply in item.reply">
           <div id={{reply.reply_id}}>{{reply.reply}} {{reply.reply_name}}</div>
         </div>
