--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -65,9 +65,13 @@ body {
   width: 40px;
   height: 25px;
   cursor: pointer;
-  background: url('http://i.stack.imgur.com/iqN2k.png');
+  /*background: url('http://i.stack.imgur.com/iqN2k.png');*/
   background-position: 0 -25px;
+  color: #cac6c3;
 }
+.vote::after{content:"\25B2";}​
+
+.reply-item { margin-left: 45px;}
 
 .red {
     background-position: 0 2px;
