--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -1,14 +1,16 @@
-<table class="table table-striped table-condensed table-hover">
+<div>
      <div ng-repeat="item in comments">
         <div id={{item.comment.id}}>{{item.comment.comment}} {{item.comment.name}} {{item.commentcount}}</div>
         <span class="vote" ng-click="upVoteComment(item.comment.id); $event.stopPropagation()"; ng-class="{red : toggle}"> </span>
-        <div ng-repeat="reply in item.reply">
-          <div id={{reply.reply_id}}>{{reply.reply}} {{reply.reply_name}}</div>
+        <div ng-class="reply-item" >
+          <div ng-repeat="reply in item.reply">
+            <div id={{reply.reply_id}}>{{reply.reply}} {{reply.reply_name}}</div>
+          </div>
         </div>
         <textarea id="maxlength_textarea" class="form-control" maxlength="225" rows="1" ng-model="textArea.textBox" placeholder="textbox"></textarea>
         <button class="btn btn-info" ng-click="addReply(textArea.textBox,item.comment.id)">Reply</button>
     </div>
-</table>
+</div>
 <form>
   <textarea ng-model="message"></textarea>
   <br>
