--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,7 +19,7 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  /*border-bottom: 1px solid #e5e5e5;*/
   margin-bottom: 10px;
 }
 /* Make the masthead heading the same height as the navigation */
@@ -67,26 +67,31 @@ body {
   cursor: pointer;
   /*background: url('http://i.stack.imgur.com/iqN2k.png');*/
   background-position: 0 -25px;
-  color: #cac6c3;
+  /*color: #cac6c3;*/
 }
 .vote::before{content:"\25B2";}​
 .reply { margin-bottom: 20px;}
-.red {
-  background-position: 0 2px;
-}
+.red { background-position: 0 2px; }
 textarea.form-control { margin: 10px 0px; }
 .btn-info.reply { margin-bottom: 10px; }
-
 textarea.form-control.message { min-height: 100px; }
-
 .bold { font-weight: bold;}
+.container.tech { max-width: 960px;}
+.container.tech .product {
+  width:100%;
+  height:130px;
+  margin-bottom: 20px;
+  clear: both;
+  vertical-align: middle;
+}
+.container.tech .product:hover { background-color: #F7F7FA; }
+.container.tech .product .product-image { 
+  width:100px;height:100px;float: left;
+}
+.container.tech .product .product-image img { width: 100px; height: 100px; }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
   /* Remove the padding we set earlier */
   .header,
   .marketing,
