--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,13 @@
-
-<div class="container" ng-controller="MainCtrl">
-        <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" style="width:100%;height:180px;border-bottom:solid 1px grey;padding-top:15px;">
+<div class="container tech" ng-controller="MainCtrl">
+        <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" class="product">
          <div style="width:50px;float:left;">
-          <div style='    text-align: center;margin-top: 50%;'>
+          <div style='text-align: center;margin-top: 50%;'>
            <span class="vote" ng-click="upVote(item.id); $event.stopPropagation()"; ng-class="{red : toggle}"> </span>
-           <span>{{item.vote}}</span>
+           <div>{{item.vote}}</div>
          </div>
          </div>
-         <div style="width:130px;height:130px;float:left;">
-           <img src={{item.image_url[0].default.url}} height="130" width="130"></a>
+         <div class="product-image">
+           <img src={{item.image_url[0].default.url}}></a>
          </div>
          <div style="float:left;font-weight:bold;height:130px;margin-left:10px;">
            <div style="margin:35%;width:100%;">
