--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="container tech" ng-controller="MainCtrl">
         <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" class="product">
-         <div style="width:50px;float:left;">
-          <div style='text-align: center;margin-top: 50%;'>
+         <div class="upvote-count">
+          <div class ="text-center">
            <span class="vote" ng-click="upVote(item.id); $event.stopPropagation()"; ng-class="{red : toggle}"> </span>
            <div>{{item.vote}}</div>
          </div>
@@ -9,10 +9,10 @@
          <div class="product-image">
            <img src={{item.image_url[0].default.url}}></a>
          </div>
-         <div style="float:left;font-weight:bold;height:130px;margin-left:10px;">
-           <div style="margin:35%;width:100%;">
-             <p>{{item.url}}</p>
-             <p style="color:grey;font-style:italic;">{{item.title}}</p>
+         <div  class="product-details">
+           <div>
+             <p class="product-title">{{item.title}}</p>
+             <p class="product-url">{{item.url}}</p>
           </div>
         </div>
        </div>
