--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -103,6 +103,8 @@ textarea.form-control.message { min-height: 100px; }
 .container .upvote-count { padding: 0px 10px; }
 .text-center { text-align: center;}
 
+.container .comment-holder { width: 768px; margin: 0 auto; }
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
