show product name

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
          <div  class="product-details">
            <div>
              <p class="product-title">{{item.title}}</p>
-             <p class="product-url">{{item.url}}</p>
+             <p class="product-url">{{item.product_name}}</p>
           </div>
         </div>
        </div>
