--- a/app/views/post.html
+++ b/app/views/post.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label for="inputName3" class="col-sm-2 control-label">Title</label>
     <div class="col-sm-4">
-      <input class="form-control" id="inputName3" placeholder="Title" ng-model="Title">
+      <input class="form-control" id="inputName3" placeholder="Title" ng-model="title">
     </div>
   </div>
   <div class="form-group">
@@ -14,7 +14,7 @@
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Url</label>
     <div class="col-sm-4">
-      <input class="form-control" id="inputEmail3" placeholder="Url" ng-model="Url">
+      <input class="form-control" id="inputEmail3" placeholder="Url" ng-model="url">
     </div>
   </div>
   <div class="form-group">
