--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,15 +85,15 @@ textarea.form-control.message { min-height: 100px; }
   align-items : center;
 }
 .container.tech .product:hover { background-color: #F7F7FA; }
-.container.tech .product .product-image { 
+.container.tech .product .product-image {
   width:100px;height:100px;float: left;
 }
 .container.tech .product .product-image img { width: 100px; height: 100px; }
-.container .product .product-details { 
+.container .product .product-details {
   display : flex;
   align-items : center;
   height:130px;
-  margin-left:10px; 
+  margin-left:10px;
 }
 .container .product .product-title {
   font-size: 20px;
@@ -122,4 +122,7 @@ textarea.form-control.message { min-height: 100px; }
   .jumbotron {
     border-bottom: 0;
   }
+}
+.red {
+    color: red;
 }
