--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
         <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" class="product">
          <div class="upvote-count">
           <div class ="text-center">
-           <span class="vote" ng-click="upVote(item.id); $event.stopPropagation()"; ng-class="{red : toggle}"> </span>
+           <span class="vote" ng-click="upVote(item.id,item.flag); $event.stopPropagation()"; ng-class="{red : item.flag}"> </span>
            <div>{{item.vote}}</div>
          </div>
          </div>
