--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -1,5 +1,10 @@
 <div class="comment-holder">
-     <div ng-repeat="item in comments">
+  <div id="partners">
+  <div class="logo-image" ng-repeat="item in comments.image_urls track by $index">
+    <img src={{item.default.url}} alt="Placeholder Image"/>
+  </div>
+  </div>
+     <div ng-repeat="item in comments.comments">
        <div class="followrow">
         <a ng-click="go('/profile/',item.comment.userid)"> <img src={{item.comment.profile_image}} class="img-circle"/>
         </a>
@@ -7,7 +12,7 @@
         <div class="bold">{{item.comment.name}}</div>
         <div id={{item.comment.id}}>{{item.comment.comment}}  {{item.commentcount}}</div>
         <span class="vote" ng-click="upVoteComment(item.comment.id); $event.stopPropagation()"; ng-class="{red : toggle}">4</span>
-        <div style="margin-left:20px;" >
+        <div style="margin-left:20px;">
           <div ng-repeat="reply in item.reply" style="margin-bottom:20px;">
             <img src={{reply.profile_url}} class="img-circle" ng-click="go('/profile/',reply.ruserid)">
             <div class="bold">{{reply.reply_name}}</div>
