--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,7 @@
-<div class="container" ng-controller="LoginCtrl">
-<fb:login-button scope="public_profile,email,user_friends" onlogin="login();">
-</fb:login-button>
-<br>
-<button type="submit" ng-click="logout()" class="btn btn-success">Logout</button>
-<div id='fb-root'></div>
+<div class="container text-center" ng-controller="LoginCtrl">
+	<fb:login-button scope="public_profile,email,user_friends" class="fb-login" onlogin="login();">
+	</fb:login-button>
+	<br>
+	<button type="submit" ng-click="logout()" class="btn btn-success btn-logout">Logout</button>
+	<div id='fb-root'></div>
 </div>
