thumbnail image gallery for post details

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,7 +7,7 @@
    </div>
    </div>
    <div class="product-image">
-     <img src={{item.image_url[0].default.url}}></a>
+     <img src={{item.image_url[0].thumbnail.url}}></a>
    </div>
    <div  class="product-details">
      <div>
