--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -4,17 +4,11 @@
     <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/screen.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
-<body ng-controller="PostDetailsCtrl as postdetailsctrl">
 
 <div class="comment-holder">
   <div class="content">
     <ng-gallery images="images" thumbs-num="2"></ng-gallery>
   </div>
-  <!--<div id="partners">
-    <div class="logo-image" ng-repeat="item in comments.image_urls">
-      <img src={{item.scaled.url}} alt="Placeholder Image" />
-    </div>
-  </div> -->
   <div ng-repeat="item in comments.comments" class="comments">
     <div class="main-comment">
       <div class="followrow">
@@ -22,9 +16,9 @@
         </a>
       </div>
       <div>
-        <div class="bold">{{item.comment.name}}</div>
-        <div id={{item.comment.id}}>{{item.comment.comment}}  {{item.commentcount}}</div>
-        <span class="vote" ng-click="upVoteComment(item.comment.id); $event.stopPropagation()"; ng-class="{red : toggle}">4</span>
+        <div class="bold">{{item.name}}</div>
+        <div id={{item.comment.id}}>{{item.comment}}</div>
+        <span class="vote" ng-click="upVoteComment(item.id,flag); $event.stopPropagation()"; ng-class="{red : item.flag}">{{item.votecount}}</span>
       </div>
     </div>
     <div style="margin-left:20px;">
