--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -18,7 +18,7 @@
       <div>
         <div class="bold">{{item.name}}</div>
         <div id={{item.comment.id}}>{{item.comment}}</div>
-        <span class="vote" ng-click="upVoteComment(item.id,flag); $event.stopPropagation()"; ng-class="{red : item.flag}">{{item.votecount}}</span>
+        <span class="vote" ng-click="upVoteComment(item.id,item.flag); $event.stopPropagation()"; ng-class="{red : item.flag}">{{item.votecount}}</span>
       </div>
     </div>
     <div style="margin-left:20px;">
