twitter integration oauth

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,29 @@
+<html>
+<head>
 <div class="container text-center" ng-controller="LoginCtrl">
 	<fb:login-button scope="public_profile,email,user_friends" class="fb-login" onlogin="login();">
 	</fb:login-button>
 	<br>
 	<button type="submit" ng-click="logout()" class="btn btn-success btn-logout">Logout</button>
 	<div id='fb-root'></div>
+	<style>
+        .container {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        #results .row {
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+    </style>
 </div>
+</head>
+<body>
+        <div class="row">
+            <div class="col-xs-12">
+                <button ng-click="connectButton()" id="connectButton" type="button" class="btn btn-primary">Connect Twitter</button>
+                <button ng-click="signOut()" id="signOut" type="button" class="btn btn-link" style="display:none;">Sign Out</button>
+            </div>
+        </div>
+</body>
+</html>
