--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,12 @@
 <div class="container tech" ng-controller="MainCtrl">
+  <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" src={{trustSrc}}>login
+      <span class="caret"></span></button>
+      <ul class="dropdown-menu">
+        <li><a href="#logout">logout</a></li>
+        <li><a href="#profile">My Profile</a></li>
+      </ul>
+  </div>
   <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" class="product">
    <div class="upvote-count">
     <div class ="text-center">
