--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
 }
 
+.text-black { color: black; }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -109,10 +110,19 @@ textarea.form-control.message { min-height: 100px; }
 .container  .flex-center { display: flex; align-items:center;}
 .container .comment-holder .comment-image { width: 30px; height: 30px; }
 
+.header .main-navbar { 
+  height: 50px; 
+  box-shadow: 0 1px 0 0 rgba(0,0,0,0.05),0 2px 4px 0 rgba(0,0,0,0.06);
+  background-color: white;
+  font-weight: 600;
+  border: none;
+  display: flex;
+  align-items: center;
+}
+
 .navbar-default .navbar-collapse, .navbar-default .navbar-form { text-align: center; }
-.nav.main-nav { display: inline-block;float: none; }
-.nav.main-nav li { padding: 10px; }
-.nav.main-nav li.login { position: absolute; right: 0px; }
+.header .main-navbar li a { color: black; }
+.header .main-navbar ul { margin:  0 auto; }
 
 .submit-holder { text-align: center; width: 700px; }
 .submit-holder input { display: inline-block; }
