--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,6 +21,7 @@
      <div>
        <p class="product-title">{{item.title}}</p>
        <p class="product-url">{{item.product_name}}</p>
+       <p class="comment-count">{{item.commentcount}}</p>
     </div>
   </div>
  </div>
